src/QGraphicsEllipseItem.h


// 
// This file has been automatically generated by RaQt_maker V0.0.6.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQGraphicsEllipseItemCtor_1(void * parent);
EXTERNC void * SCWQGraphicsEllipseItemCtor_1(void * parent);
EXTERNC void * QWQGraphicsEllipseItemCtor_2(void * rect, void * parent);
EXTERNC void * SCWQGraphicsEllipseItemCtor_2(void * rect, void * parent);
EXTERNC void * QWQGraphicsEllipseItemCtor_3(double  x, double  y, double  w, double  h, void * parent);
EXTERNC void * SCWQGraphicsEllipseItemCtor_3(double  x, double  y, double  w, double  h, void * parent);
EXTERNC void * QWQGraphicsEllipseItemrect(void * obj);
EXTERNC void QWQGraphicsEllipseItemsetRect_1(void * obj, void * rect);
EXTERNC void QWQGraphicsEllipseItemsetRect_2(void * obj, double  x, double  y, double  w, double  h);
EXTERNC int32_t QWQGraphicsEllipseItemstartAngle(void * obj);
EXTERNC void QWQGraphicsEllipseItemsetStartAngle(void * obj, int32_t  angle);
EXTERNC int32_t QWQGraphicsEllipseItemspanAngle(void * obj);
EXTERNC void QWQGraphicsEllipseItemsetSpanAngle(void * obj, int32_t  angle);
EXTERNC void * QWQGraphicsEllipseItemboundingRect(void * obj);
EXTERNC int8_t QWQGraphicsEllipseItemcontains(void * obj, void * point);
EXTERNC void QWvalidateCB_QGraphicsEllipseItem(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQGraphicsEllipseItemDtor(void *);
EXTERNC void SCWQGraphicsEllipseItemDtor(void *);